--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+server.port=8081
+spring.datasource.url = jdbc:mysql://localhost:3306/dbBudget?createDatabaseIfNotExist=true
+spring.datasource.username = root
+spring.datasource.password =
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto =update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
