Traitement du budget, email et alerte

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto =update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sogoreibrahimodk@gmail.com
+spring.mail.password=kfdotdeingrtvgdh
+spring.mail.properties.mail.smtp.auth=true 
+spring.mail.properties.mail.smtp.starttls.enable=true
